--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   cupertino_icons: ^1.0.6
   calendar_timeline: ^1.1.3
   flutter_native_splash: ^2.4.1
+  google_fonts: ^6.2.1
+  firebase_core: ^3.3.0
+  cloud_firestore: ^5.2.1
 
 dev_dependencies:
   flutter_test:
