--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   cloud_firestore: ^5.2.1
   flutter_slidable: ^3.1.1
   firebase_auth: ^5.2.0
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
