--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   flutter_slidable: ^3.1.1
   firebase_auth: ^5.2.0
   provider: ^6.1.2
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
