--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,10 +44,14 @@ dependencies:
   firebase_auth: ^5.2.0
   provider: ^6.1.2
   intl: ^0.19.0
+  flutter_launcher_icons: ^0.13.1
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
